<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>operator_node</name>
  <version>0.0.1</version>
  <description>The operator_node package</description>

  <author email="chris.mower@ed.ac.uk">Chris E. Mower</author>
  <maintainer email="chris.mower@ed.ac.uk">Chris E. Mower</maintainer>

  <license>BSD 2-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>keyboard</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>

</package>
