<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>operator_node</name>
  <version>2.0.0</version>
  <description>The operator_node package</description>

  <author email="c.mower@ed.ac.uk">Chris E. Mower</author>
  <maintainer email="c.mower@ed.ac.uk">Chris E. Mower</maintainer>

  <license>BSD 2-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  <depend>keyboard</depend>
  <depend>python-pygame</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
